[package]
name = "avr-robot-car"
version = "0.1.0"
authors = ["dajamante <aimaiga2@gmail.com>"]
edition = "2018"
description = "Implementation of a classic arduino obstacle avoiding robot."
homepage = "https://github.com/Dajamante/avr-car"
repository = "https://github.com/Dajamante/avr-car"
readme = "README.md"
keywords = ["educational project", "beginner", "arduino", "atmega328p", "robot"]
categories = ["Embedded development", "No standard library"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
# The `leonardo-panic` example shows a more elaborate version.
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
pwm-pca9685 = "0.3.1"
infrared = "0.14.1"

#[dependencies.arduino-hal]
#git = "https://github.com/Rahix/avr-hal"
#rev = "7337cd76cd96f2d27701b137396d94a06d3a501d"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "533159f"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.4"

[dependencies.either]
version = "1.6.1"
default-features = false

[dependencies.void]
version = "*"
default-features = false


# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
